@@ -231,6 +231,8 @@
 	<xsd:sequence>
 		<xsd:element name="description" type="xsd:string" />
 		<xsd:element name="homepage" type="xsd:string" />
+		<xsd:element name="licenses" type="xsd:string" />
+		<xsd:element name="provide" type="xsd:string" minOccurs="0"  maxOccurs="1" />
 		<xsd:element name="version" type="PackageVersion" minOccurs="0" maxOccurs="unbounded" />
 	</xsd:sequence>
 	<xsd:attribute name="name" type="xsd:string" use="required" />
